RESOLVED FIXED45191
[chromium] Fix complex text word spacing on Linux.
https://bugs.webkit.org/show_bug.cgi?id=45191
Summary [chromium] Fix complex text word spacing on Linux.
Adam Langley
Reported 2010-09-03 11:57:45 PDT
I broke complex text word spacing with r66689. I misnamed a variable in the original code |glyphIndex| when it was actually indexing code points. That meant that I compared it against the wrong limit when working around Harfbuzz issues and neatly disabled word spacing.
Attachments
Patch (2.02 KB, patch)
2010-09-03 12:00 PDT, Adam Langley
tony: review+
agl: commit-queue-
Adam Langley
Comment 1 2010-09-03 12:00:45 PDT
Tony Chang
Comment 2 2010-09-03 12:06:02 PDT
Can you also remove the line from test_expectations.txt where I marked the test as failing?
Adam Langley
Comment 3 2010-09-03 12:16:18 PDT
Comment on attachment 66530 [details] Patch Will land on Monday (with the test-expectations changing included): landing on a Friday afternoon is tempting fate.
Adam Langley
Comment 4 2010-09-07 07:54:04 PDT
Tony Chang
Comment 6 2010-09-07 10:26:37 PDT
Reopening
Adam Langley
Comment 7 2010-09-07 10:29:22 PDT
(In reply to comment #5) > Hmm, it still looks a bit off. It looks like the initial spacing is lost. I checked by running the layout tests. However, I now imagine that the line in test_expectations.txt would have suppressed the failure, right? I'm not sure that either result is currently more 'right', but we should probably not change it for change's sake so I'll take another look.
Tony Chang
Comment 8 2010-09-07 10:36:34 PDT
(In reply to comment #7) > (In reply to comment #5) > > Hmm, it still looks a bit off. It looks like the initial spacing is lost. > > I checked by running the layout tests. However, I now imagine that the line in test_expectations.txt would have suppressed the failure, right? Yes, if you ran the test before updating test_expectations.txt. > I'm not sure that either result is currently more 'right', but we should probably not change it for change's sake so I'll take another look. Thanks, Adam! Sorry this is such a yak shave . . .
Adam Langley
Comment 9 2010-09-13 11:47:39 PDT
Rebaselined in r67400. I played with a few different things but nothing was clearly better. The new baseline doesn't include word-spacing at the right-hand-side of RTL text, which is better (I think).
Note You need to log in before you can comment on or make changes to this bug.